--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
+    "express": "^4.21.1",
     "pg": "^8.13.1",
     "typescript": "^5.7.2"
   }
